kubernetes/apps/services/stirling-pdf/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stirling-pdf
  annotations:
    external-dns/is-public: "false"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    hajimari.io/enable: "true"
    hajimari.io/icon: ph:file-pdf-bold
    hajimari.io/group: services
    hajimari.io/appName: PDF-Tools
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "networking-chain-internal-default-forwardauth@kubernetescrd"
spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - "pdf.${SECRET_DOMAIN}"
      secretName: "pdf.${SECRET_DOMAIN//./-}-prod-tls"
  rules:
    - host: pdf.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stirling-pdf
                port:
                  number: 8080
          # - path: /outpost.goauthentik.io/
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: authentik-authentik
          #       port:
          #         number: 9000
